@@ -63,6 +63,10 @@ Revision 4.2.5rc2
   does not let you to configure different securityModels per securityname
   at VACM though the cfgCmdGen() wrapper.
 - MIB builder traceback formatting and reporting improved.
+- Fix to SnmpUSMSecurityModel._sec2usr() - raise NoSuchInstance error
+  to emulate MIB lookup failure. Previous version of the code always
+  succeeded returning securityName on failure. That screwed new row
+  creation logic.
 - Fix and significant logic rework of snmpCommunityTable to make it working
   in both Generator and Responder modes and better follow RFC2576 
   requirements on sequential entries lookup and selection. As a side effect,
